syntax = "proto3";

package timeseries_grpc;

import "google/protobuf/timestamp.proto";

message Value {
    google.protobuf.Timestamp hour = 1;
    double value = 2;
}

message Timeseries {
    string id = 1;
    string meterId = 2;
    string customerId = 3;
    string resolution = 4;
    google.protobuf.Timestamp from = 5;
    google.protobuf.Timestamp to = 6;
    repeated Value values = 7;
}

message GetAllFromTimeToTimeRequest {
    google.protobuf.Timestamp from = 1;
    google.protobuf.Timestamp to = 2;
    string customerId = 3;
    string meterId = 4;
}

message GetAllFromTimeToTimeResponse {
    repeated Timeseries TimeseriesList = 1;
}

message Error {
    string message = 1;
}

service timeseriesHandler {
    rpc Store(Timeseries) returns (Timeseries) {}
    //TODO get all timeseries for a period of time
    rpc GetAllFromTimeToTime(GetAllFromTimeToTimeRequest) returns (GetAllFromTimeToTimeResponse){}
    //TODO get total usage for customer for a period of time
    //TODO get total usage for meter for a period of time
    
}